--- a/variables-prod.yaml
+++ b/variables-prod.yaml
@@ -2,3 +2,4 @@ login_user: root
 login_host: db-prod.rithinexpense.online
 login_password: ExpenseApp@1
 DB_HOST: db-prod.rithinexpense.online
+BACKEND_API_URL: backend.app-prod.rithinexpens.online
