--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -34,5 +34,9 @@
     ansible.builtin.template:
       src: expense.conf.j2
       dest: /etc/nginx/default.d/expense.conf
-    notify:
-    - restart nginx
+    # notify:
+    # - restart nginx
+  - name: restart nginx
+    ansible.builtin.service:
+      name: nginx
+      state: restarted
