--- a/variables-dev.yaml
+++ b/variables-dev.yaml
@@ -2,4 +2,4 @@ login_user: root
 login_host: db-dev.rithinexpense.online
 login_password: ExpenseApp1
 DB_HOST: db-dev.rithinexpense.online
-BACKEND_API_URL: backend.app-dev.rithinexpens.online
+BACKEND_API_URL: backend.app-dev.rithinexpense.online
