--- a/variables-dev.yaml
+++ b/variables-dev.yaml
@@ -3,3 +3,4 @@ login_host: db-dev.rithinexpense.online
 login_password: ExpenseApp1
 DB_HOST: db-dev.rithinexpense.online
 BACKEND_API_URL: backend.app-dev.rithinexpense.online
+nexus_url: nexus.rithinexpense.online:8081
